<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Spor Bahis</string>
    <string name="sport_bet">Spor Bahis</string>
    <string name="settings">Ayarlar</string>
    <string name="basket">Sepetim</string>
    <string name="ok">Tamam</string>
    <string name="odds">Oranlar</string>
    <string name="odds_empty_state">Etkinliğe ait oran bulunamadı...</string>
    <string name="match_detail">Maç Detayı</string>
    <string name="search_hint">Etkinlik ara...</string>
    <string name="welcome">Hoş Geldiniz</string>
    <string name="welcome_message">Spor Bahis uygulamasına hoş geldiniz!</string>
    <string name="login">Giriş Yap</string>
    <string name="register">Kayıt Ol</string>
    <string name="email">E-posta</string>
    <string name="email_hint">E-posta adresinizi girin</string>
    <string name="password">Şifre</string>
    <string name="password_hint">Şifrenizi girin</string>
    <string name="logout">Çıkış Yap</string>
    <string name="name">İsim</string>
    <string name="version">Versiyon</string>
    <string name="email_required">E-posta adresi gereklidir</string>
    <string name="password_required">Şifre gereklidir</string>
    <string name="added_to_basket">Sepete eklendi</string>
    <string name="basket_cleared">Sepet temizlendi</string>
    <string name="basket_clear">Sepeti temizle</string>
    <string name="total_price">Toplam: %1$.2f₺</string>
    <string name="event_count">%d Etkinlik</string>
    <string name="logged_out">Çıkış yapıldı</string>
    <string name="logout_confirmation">Çıkış yapmak istediğinizden emin misiniz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
    <string name="register_prompt">Hesabınız yok mu? Kayıt olun</string>
    <string name="login_prompt">Zaten hesabınız var mı? Giriş yapın</string>
    <string name="about">Hakkında</string>
    <string name="event_detail_format">%1$s - %2$s</string>
    <string name="theme">Tema</string>
    <string name="light_theme">Açık Tema</string>
    <string name="dark_theme">Koyu Tema</string>
    <string name="system_theme">Sistem Tema</string>
    <string name="add_to_coupon">Kupona Ekle</string>
</resources>