<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">


    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/value_16"
        app:cardCornerRadius="@dimen/value_8"
        app:cardElevation="@dimen/value_4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/value_16">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/theme"
                android:textAppearance="?attr/textAppearanceHeadline6" />

            <RadioGroup
                android:id="@+id/themeRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/value_8">

                <RadioButton
                    android:id="@+id/lightThemeRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/light_theme" />

                <RadioButton
                    android:id="@+id/darkThemeRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_theme" />

                <RadioButton
                    android:id="@+id/systemThemeRadio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/system_theme" />

            </RadioGroup>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        app:icon="@drawable/ic_logout" />


    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textAppearance="?attr/textAppearanceHeadline6"
        tools:text="Version 1.0.0" />

</LinearLayout> 