<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/value_16">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/basketRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/value_8"
        android:gravity="end"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/totalPriceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="@string/total_price"
            android:textSize="@dimen/text_value_16"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/eventCountTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_count"
            android:textSize="@dimen/text_value_16" />
    </LinearLayout>

    <Button
        android:id="@+id/clearBasket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/basket_clear" />
</LinearLayout> 